# Gomoku-AI

./: .gitignore  README.md  README.zh.md  coi-serviceworker.js  index.html  server.py
.github/workflows/: pages.yml
assets/css/: board.css  style.css
assets/js/: README.md  README.zh.md  ai-manager.js  ai-search-core.js  ai-worker.js  board-ui.js  game.js  main.js  opening-book.js
assets/opening-book/: README.md  README.zh.md  json2jpg.py  json2sgf.py  manifest.json
assets/opening-book/runs/: book-t15000-e500-p8-r4-b8-v1.json
assets/opening-book/sgf/: book-t15000-e500-p8-r4-b8-v1.sgf
assets/wasm/: README.md  README.zh.md  gomoku_ai.d.ts  gomoku_ai.js  gomoku_ai_bg.wasm
docs-site/: mkdocs.yml
docs-site/docs/en/: algorithm.md  index.md  rules.md  spec.md
docs-site/docs/en/js/: README.md
docs-site/docs/en/prd/: github_action_prd.md  mkdocs_prd.md
docs-site/docs/en/rust/: README.md
docs-site/docs/en/wasm/: README.md
docs-site/docs/zh/: algorithm.zh.md  index.zh.md  rules.md  rules.zh.md  spec.zh.md
docs-site/docs/zh/js/: README.zh.md
docs-site/docs/zh/prd/: github_action_prd.zh.md  mkdocs_prd.zh.md
docs-site/docs/zh/rust/: README.zh.md
docs-site/docs/zh/wasm/: README.zh.md
rust-ai/: Cargo.toml  README.md  README.zh.md
rust-ai/src/: board.rs  evaluate.rs  lib.rs  movegen.rs  search.rs  threat.rs  types.rs
tools/opening-book/: README.md  README.zh.md  generate-opening-book.mjs  generate-opening-book.sh  search-worker.mjs
